--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,3 +10,16 @@ const Element = href ? 'a' : 'button';
 ---
 
 <Element class="custom_button" style={style} href={href}><slot /></Element>
+
+<style>
+  .custom_button {
+    font-family: 'Roboto Bold';
+    margin-top: 23px;
+    margin-bottom: 40px;
+    height: 58px;
+    border: none;
+    background-color: var(--dark-slate-grey);
+    color: white;
+    border-radius: 7px;
+  }
+</style>
