--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -30,6 +30,13 @@ if (Astro.cookies.has('data')) {
       type="email"
       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
     />
-    <Button>Confirm</Button>
+    <Button>Subscribe to monthly newsletter</Button>
   </form>
 </div>
+
+<style>
+  .form_section__form {
+    display: flex;
+    flex-direction: column;
+  }
+</style>
