feat: finish index desktop design

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -22,4 +22,11 @@ const Element = href ? 'a' : 'button';
     color: white;
     border-radius: 7px;
   }
+
+  @media screen and (min-width: 1000px) {
+    .custom_button {
+      margin-top: 24px;
+      margin-bottom: 97px;
+    }
+  }
 </style>
