--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -39,4 +39,10 @@ if (Astro.cookies.has('data')) {
     display: flex;
     flex-direction: column;
   }
+
+  @media screen and (min-width: 1000px) {
+    .form_section__form {
+      max-width: 375px;
+    }
+  }
 </style>
