feat: finish thank you page mobile design

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -23,6 +23,14 @@ const Element = href ? 'a' : 'button';
     border-radius: 7px;
   }
 
+  a {
+    text-decoration: none;
+    padding-top: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   @media screen and (min-width: 1000px) {
     .custom_button {
       margin-top: 24px;
