--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,14 +2,17 @@
 export interface Props {
   style?: string;
   href?: string;
+  class?: string;
 }
 
-const { style, href } = Astro.props;
+const { style, href, class: className } = Astro.props;
 
 const Element = href ? 'a' : 'button';
 ---
 
-<Element class="custom_button" style={style} href={href}><slot /></Element>
+<Element class:list={[className, 'custom_button']} style={style} href={href}>
+  <slot />
+</Element>
 
 <style>
   .custom_button {
