--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -91,7 +91,7 @@ const {
 
   .form_section_input_error {
     outline: none !important;
-    border: 2px solid var(--errors);
+    border: 1px solid var(--tomato);
   }
 
   .error_container {
