--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -98,6 +98,8 @@ const { title } = Astro.props;
 
   :root {
     --tomato: hsl(4, 100%, 67%);
+    --pink: hsl(347, 98%, 66%);
+    --orange: hsl(10, 98%, 64%);
     --dark-slate-grey: hsl(234, 29%, 20%);
     --charcoal-grey: hsl(235, 18%, 26%);
     --grey: hsl(231, 7%, 60%);
