--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,8 @@ import Layout from '../layouts/Layout.astro';
     background-color: white;
     background-image: url(/images/illustration-sign-up-mobile.svg);
     background-repeat: no-repeat;
+    background-size: cover contain;
+    background-position: top;
     padding-left: 24px;
     padding-right: 24px;
   }
